# address-propensity

./: Cargo.toml  Database.Dockerfile  Dockerfile  README.md  TODO.md  sqlx-data.json
migrations/: 20210921035132_create_properties_table.sql  20210921050147_add_propensity_table.sql  20210921225524_add_apn_indexes.sql  20210921225951_add_zipcode_to_propensity.sql
resources/: production.yaml
resources/data/: core_property_data.csv  core_property_data_test.csv  propensity_scores.csv
scripts/: create_db.sh  init_db.sh
src/: lib.rs
src/core/: mod.rs  settings.rs
src/core/domain/: address.rs  mod.rs  propensity.rs  property.rs
src/core/settings/: error.rs
src/loader/: errors.rs  main.rs  mod.rs  propensity_loader.rs  property_loader.rs  settings.rs
src/loader/domain/: csv_propensity.rs  csv_property.rs  mod.rs
src/server/: errors.rs  main.rs  mod.rs  settings.rs
src/server/routes/: health.rs  mod.rs  propensity.rs
src/server/settings/: http_server.rs
