[package]
name = "address-propensity"
version = "0.1.0"
edition = "2018"

[[bin]]
name = "loader"
path = "src/loader/main.rs"

[[bin]]
name = "server"
path = "src/server/main.rs"

[dependencies]
actix-http = "=3.0.0-beta.10"
actix-web = "=4.0.0-beta.9"
anyhow = "*"
bigdecimal = { version = "0.2.2", features = ["serde"] }
clap = { version = "3.0.0-beta.4" }
chrono = "*"
config = { git = "https://github.com/dmrolfs/config-rs" }
console = "*"
csv = "*"
enum-display-derive = "*"
indicatif="*"
itertools = "*"
lazy_static = "*"
plotters="*"
regex = "*"
serde = { version = "*", features = ["derive"] }
serde_json = "*"
serde_with = { version = "*", features = ["chrono", "json", "macros"] }
sqlx = { version = "*", default-features = false, features = ["runtime-actix-rustls", "macros", "postgres", "bigdecimal", "uuid", "chrono", "migrate", "offline"] }
thiserror = "*"
tokio = { version = "*", features = ["full"]}
tracing = "*"
tracing-actix-web = "0.4.0-beta.12"
tracing-bunyan-formatter = "*"
tracing-futures = "*"
tracing-log = "*"
tracing-subscriber = "*"
validator = { version = "*", features = ["derive"] }

[dev-dependencies]
pretty_assertions = "*"
claim  = "*"
fake = { version = "*", features = ["chrono"] }
