[package]
name = "address-propensity"
version = "0.1.1"
edition = "2018"

[[bin]]
name = "loader"
path = "src/loader/main.rs"

[[bin]]
name = "server"
path = "src/server/main.rs"

[dependencies]
actix-http = "=3.0.0-beta.10"
actix-web = "=4.0.0-beta.9"
anyhow = "1.0"
bigdecimal = { version = "0.2.2", features = ["serde"] }
clap = { version = "3.0.0-beta.4" }
chrono = "0.4"
config = { git = "https://github.com/dmrolfs/config-rs" }
csv = "1.1"
enum-display-derive = "0.1"
itertools = "0.10"
lazy_static = "1.4"
plotters="0.3"
plotters-bitmap = "0.3"
progressing = "3"
regex = "1.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = { version = "1.10", features = ["chrono", "json", "macros"] }
sqlx = { version = "0.5", default-features = false, features = ["runtime-actix-rustls", "macros", "postgres", "bigdecimal", "uuid", "chrono", "migrate", "offline"] }
thiserror = "1.0"
tokio = { version = "1.12", features = ["full"]}
tracing = "0.1"
tracing-actix-web = "0.4.0-beta.12"
tracing-bunyan-formatter = "0.2"
tracing-futures = "0.2"
tracing-log = "0.1"
tracing-subscriber = "0.2"
validator = { version = "0.14", features = ["derive"] }
#console = "0.14"
#indicatif="0.16"

[dev-dependencies]
pretty_assertions = "*"
claim  = "*"
fake = { version = "*", features = ["chrono"] }
